add effector template

--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "axios": "^0.19.2",
+    "effector": "^21.0.3",
+    "effector-persist": "^1.0.2",
+    "effector-react": "^21.0.4",
     "emotion-theming": "^10.0.27",
     "husky": "^4.2.5",
     "i18next": "^19.6.2",
     "i18next-browser-languagedetector": "^5.0.0",
     "lint-staged": "^10.2.11",
+    "patronum": "^0.103.1",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
