--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@emotion/styled": "^10.0.27",
     "axios": "^0.19.2",
     "effector": "^21.0.3",
-    "effector-persist": "^1.0.2",
     "effector-react": "^21.0.4",
+    "effector-storage": "^3.0.0",
     "emotion-theming": "^10.0.27",
     "husky": "^4.2.5",
     "i18next": "^19.6.2",
